# 2D-detection-and-recognition

./: .gitignore  README.md
ArcSoft_ArcFace_Linux_x64_V3.0/: releasenotes.txt
ArcSoft_ArcFace_Linux_x64_V3.0/samplecode/ASFTestDemo/: CMakeLists.txt  samplecode.cpp  test.cpp
ArcSoft_ArcFace_Linux_x64_V3.0/samplecode/ASFTestDemo/images/: 640x480_4.NV21  biden-yuv420p.yuv
CenterTrack/src/: .main.py.swp  .test.py.swp  main.py  nohup.out  test.py  visualization.py
CenterTrack/src/lib/: .opts.py.swp  detector.py  opts.py  trainer.py
CenterTrack/src/lib/dataset/datasets/: mot.py
CenterTrack/src/tools/: .convert_mot_to_coco.py.swh  .convert_mot_to_coco.py.swi  .convert_mot_to_coco.py.swj  .convert_mot_to_coco.py.swk  .convert_mot_to_coco.py.swl  .convert_mot_to_coco.py.swm  .convert_mot_to_coco.py.swn  .convert_mot_to_coco.py.swo  .convert_mot_to_coco.py.swp  convert_mot_to_coco.py
hyperlpr-master/: demo.py  requirements.txt
